Fix article width and footer alignment

--- a/module4/example/style42.css
+++ b/module4/example/style42.css
@@ -36,14 +36,16 @@ section {
 
 h2 {
   border-bottom: 5px #000000 solid;
+  width: 60%;
   min-width: 30%;
   text-align: center;
+  margin: auto;
   padding: 30px;
 }
 
 article {
   background-color: #FFFFFF;
-  min-width: 40%;
+  width: 40%;
   text-align: justify;
   margin: 50px;
   padding-top: 10px;
@@ -74,4 +76,5 @@ footer {
   min-height: 10px;
   padding: 10px;
   margin-top: 30px;
+  text-align: center;
 }
